--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <form method="POST" action="/Download" class="jumbotron">
         <input type="url" name="URL" placeholder="Link do YouTube:">
         <button type="submit" class="btn-primary">Download</button><br>
+        <p><%=Erro%></p>
     </form>
 </body>
 </html>
